<resources>
    <string name="app_name">Recife do Alto</string>
    <string name="route">How can I get?</string>
    <string name="you_are_here">You are here.</string>
    <string name="ver_mapa">See Map</string>
    <string name="locals_items">Locations List</string>
    <string name="shopping">Shopping</string>
    <string name="bridge">Bridge</string>
    <string name="river">River</string>
    <string name="museum">Museum</string>
    <string name="boat_tour">Boat Tour</string>
    <string name="all">All</string>
    <string name="menu_categories">Category Menu</string>
    <string name="observatory_list">Observatory List</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About</string>
    <string name="about_prefecture_info">Support: Recife Prefecture</string>
    <string name="about_ufrpe_info">Department of Statistics and Informatics
Project developed by Christian Spinelli and Rodolfo Bispo and coordinated by prof. Gilberto A. de A. Cysneiros Filho</string>
    <string name="historical_monument">Historical monument
</string>
    <string name="square">Square</string>
    <string name="church">Church</string>
</resources>
