<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/category_all"
              android:title="@string/all"
              android:checked="true"/>
        <item android:id="@+id/category_shopping"
              android:title="@string/shopping"
              android:icon="@drawable/shopping_icon"/>
        <item android:id="@+id/category_bridge"
            android:title="@string/bridge"
            android:icon="@drawable/bridge_icon"/>
        <item android:id="@+id/category_museum"
              android:title="@string/museum"
              android:icon="@drawable/museum_war_icon"/>
        <item android:id="@+id/category_river"
              android:title="@string/river"
              android:icon="@drawable/river_icon"/>
        <item
            android:id="@+id/category_boat_tour"
            android:icon="@drawable/boat_tour_icon"
            android:title="@string/boat_tour"
            android:visible="true"/>
    </group>

</menu>